    AMBER Leap program.

 -BUG FIXES
  * Fixed a legacy bug with the web server (web server doesn't like ligand 
    files generated on Windows or old Mac OS platforms).
  * Fixed a bug in configure.ac, so that PDB2PQR no longer checks for 
	Numpy.pth at configure stage.
  * Updated pdb2pka/substruct/Makefile.am. 
  * Fixed isBackbone bug in definitions.py.
  * Fixed a bug for Carboxylic residues in hydrogens.py

#############################################################################
BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
#############################################################################
 - NEW FEATURES / CHANGES
  * Added "make test" and "make adv-test"
  * Fixed problems with "make dist"
  * Added integration with Opal for launching jobs as well as querying status
  * The user may use NUMPY to specify the location of NUMPY.
  * Both PDB2PKA and PROPKA are enabled by default.  PDB2PKA is enabled by
    default since ligand parameterization would fail without this option.
  * For a regular user, "make install" tells the user the exact command the
    system administrator will use to make the URL viewable.
  * The default value of 7.00 for the pH on the server form is removed due
    to a problem with browser refershing.
  * Updated warning messages for lines beginning with SITE, TURN, SSBOND and 
    LINK.
  * Switched license from GPL to BSD.
  * Made a new tar ball pdb2pqr-1.3.0-1.tar.gz for Windows users who cannot 
    create pdb2pqr.py through configure process.

 - INFRASTRUCTURE
  * configure now automatically detects SRCPATH, WEBSITE, and the location
    of pdb2pqr.cgi.  In version 1.2.1, LOCALPATH(SRCPATH) and WEBSITE were
    defined in src/server.py and the location of pdb2pqr.cgi was specified
    in html/server.html (index.html).  Configure now uses variable 
    substitution with new files src/server.py.in and html/server.html.in to
    create src/server.py and html/server.html (index.html).